Fixes legibility bug on cancelled programs.
Fixes legibility bug occurring on seasons for cancelled programs.

--- a/custom-css/catalog.scss
+++ b/custom-css/catalog.scss
@@ -361,10 +361,13 @@
 	.winter,
 	.spring,
 	.summer{
+		//typography
+		color: black;
+		//backgrounds & borders
 		background-color: mix(white, $blueberry-susan, 80%);
 		
 		abbr{
-			background-color: transparent;
+			background-color: mix(white, $blueberry-susan, 80%);
 		}
 	}
 	
